# YaCoAP

./: .gitignore  Makefile.am  Makefile.riot  Makefile.yacoap  coap.c  coap_parse.c  resources.c
